syntax = "proto3";

option go_package = "github.com/HaCaK/pse-bee-gobooking/src/property/proto";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package gen;

service PropertyExternal {
  rpc CreateProperty(CreatePropertyReq) returns (Property) {
    option (google.api.http) = {
      post: "/properties/createProperty",
      body: "*"
    };
  }
  rpc UpdateProperty(UpdatePropertyReq) returns (Property) {
    option (google.api.http) = {
      put: "/properties/updateProperty/{id}",
      body: "*"
    };
  }
  rpc ShowProperty(PropertyIdReq) returns (Property) {
    option (google.api.http) = {
      get: "/properties/showProperty/{id}"
    };
  }
  rpc ListProperties(google.protobuf.Empty) returns (ListPropertiesResp) {
    option (google.api.http) = {
      get: "/properties/listProperties"
    };
  }
  rpc DeleteProperty(PropertyIdReq) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/properties/deleteProperty/{id}"
    };
  }
}

message CreatePropertyReq {
  string name = 1;
  string description = 2;
  string owner_name = 3;
  string address = 4;
}

message UpdatePropertyReq {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  string owner_name = 4;
  string address = 5;
}

message PropertyIdReq {
  uint32 id = 1;
}

message ListPropertiesResp {
  repeated Property properties = 1;
}

message Property {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  string owner_name = 4;
  string status = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}